versions/26.1.2/translated/uk_ua/develop/rendering/particles/creating-particles.md
---
title: Створення власних частинок
description: Дізнайтеся, як створити власну частинку за допомогою Fabric API.
authors:
  - Superkat32
---

Частинки — це потужний інструмент. Вони можуть додати атмосфери красивій сцені або додати напруги в битву з босом. Нумо додаймо одну!

## Реєстрація власних частинок {#register-a-custom-particle}

Ми додамо нову частинку іскор, яка імітуватиме рух частинки стрижня Енду.

Спочатку нам потрібно зареєструвати `ParticleType` у вашому [ініціалізаторі мода](../../getting-started/project-structure#entrypoints), класі за допомогою вашого ID мода.

<<< @/reference/26.1.2/src/main/java/com/example/docs/ExampleMod.java#particle_register_main

«sparkle_particle» малими літерами — це шлях JSON для текстури частинки. Пізніше ви створите новий файл JSON із такою назвою.

## Реєстрація на стороні клієнту {#client-side-registration}

Після того, як ви зареєстрували частинку в ініціалізаторі мода, вам також потрібно буде зареєструвати частинку в ініціалізаторі на стороні клієнта.

<<< @/reference/26.1.2/src/client/java/com/example/docs/ExampleModClient.java#particle_register_client

У цьому прикладі ми реєструємо нашу частинку на стороні клієнта. Потім ми надаємо частинці деякий рух, використовуючи фабрику частинок стрижня Енду. Це означає, що наша частинка рухатиметься так само, як частинка стрижня Енду.

::: tip

Ви можете побачити всі фабрики частинок, переглянувши всі реалізації інтерфейсу `ParticleProvider`. Це корисно, якщо ви хочете використовувати поведінку іншої частинки для своєї власної частинки.

- Гарячі клавіші IntelliJ: <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>B</kbd>
- Гарячі клавіші isual Studio Code: <kbd>Ctrl</kbd>+<kbd>F12</kbd>

:::

## Створення JSON і додання текстури {#creating-a-json-file-and-adding-textures}

Вам потрібно буде створити 2 теки у вашій теці `resources/assets/example-mod/`.

| Шлях до теки         | Пояснення                                                                          |
| -------------------- | ---------------------------------------------------------------------------------- |
| `/textures/particle` | Тека `particle` міститиме всі текстури для всіх ваших частинок.    |
| `/particles`         | Тека `particles` міститиме всі файли json для всіх ваших частинок. |

Для цього прикладу ми матимемо лише одну текстуру в `textures/particle` під назвою «sparkle_particle_texture.png».

Далі створіть новий файл JSON у `particles` з тим же ім’ям, що й шлях JSON, який ви використовували під час реєстрації свого ParticleType. Для цього прикладу нам потрібно буде створити `sparkle_particle.json`. Цей файл важливий, оскільки він дозволяє Minecraft знати, які текстури має використовувати наша частинка.

<<< @/reference/26.1.2/src/main/resources/assets/example-mod/particles/sparkle_particle.json

::: tip

Ви можете додати більше текстур до масиву `textures`, щоб створити анімацію частинок. Частинка буде циклічно переглядати текстури в масиві, починаючи з першої текстури.

:::

## Тестування нових частинок {#testing-the-new-particle}

Після того, як ви завершите файл JSON і збережете свою роботу, ви можете завантажити Minecraft і перевірити все!

Ви можете перевірити, чи все працює, ввівши таку команду:

```mcfunction
/particle example-mod:sparkle_particle ~ ~1 ~
```

![Демонстрація частинки](/assets/develop/rendering/particles/sparkle-particle-showcase.png)

::: info

За допомогою цієї команди частинка з’явиться всередині гравця. Ймовірно, вам доведеться пройти назад, щоб побачити це.

:::

Крім того, ви також можете використовувати командний блок, щоб викликати частинку за допомогою такої ж команди.
